syntax = "proto3";

option csharp_namespace = "UserGrpcServer";

package user;

service UserService {
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoReply);
}

message GetUserInfoRequest {
  string userId = 1;
}

message GetUserInfoReply {
  string username = 1;
  bool isEmailConfirmed = 2;
}